// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent api generates valid keymaps 1`] = `
Object {
  "Key": Object {
    "agent_id": Object {
      "S": "xxxx",
    },
  },
}
`;

exports[`agent api generates valid keymaps 2`] = `
Object {
  "Item": Object {
    "agent_id": Object {
      "S": "xxxx",
    },
    "contactId": "yyyy",
  },
}
`;

exports[`contact api adjusts state based on action 1`] = `
Object {
  "agentId": "none",
  "casesData": Object {
    "ids": "-1",
    "pdas": "-1",
    "worksites": "-1",
  },
  "contactId": "abc",
  "currentAction": "enter_ivr",
  "db": Anything,
  "entered_timestamp": null,
  "locale": 2,
  "loggerName": "contact[abc|en_US#queued]",
  "priority": 1,
  "routed": false,
  "ttl": null,
}
`;

exports[`contact api adjusts state based on action 2`] = `
Object {
  "agentId": "none",
  "casesData": Object {
    "ids": "-1",
    "pdas": "-1",
    "worksites": "-1",
  },
  "contactId": "abc",
  "currentAction": "connecting",
  "db": Anything,
  "entered_timestamp": null,
  "locale": 2,
  "loggerName": "contact[abc|en_US#queued]",
  "priority": 1,
  "routed": true,
  "ttl": null,
}
`;

exports[`contact api generates the correct operations 1`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#E": "ttl",
    "#P": "priority",
    "#S": "state",
    "#T": "entered_timestamp",
  },
  "ExpressionAttributeValues": Object {
    ":e": 1592629380,
    ":p": 1,
    ":s": "somestate",
    ":t": "2020-06-20T05:00:00.000Z",
  },
  "Key": Object {
    "contact_id": "xxxx",
  },
  "UpdateExpression": "set #S = :s, #P = :p, #T = :t, #A = :a, #I = :i, #E = :e",
}
`;

exports[`contact api generates the correct operations 2`] = `
Object {
  "ExpressionAttributeNames": Object {
    "#S": "state",
    "#X": "ttl",
  },
  "ExpressionAttributeValues": Object {
    ":now": 1592629200,
    ":s": "routed",
  },
  "FilterExpression": "#X > :now",
  "IndexName": "state-index",
  "KeyConditionExpression": "#S = :S",
  "Select": "COUNT",
}
`;

exports[`outbound api creates callback 1`] = `
Object {
  "config": Object {
    "data": "{\\"dnis1\\":\\"+10000000000\\",\\"call_type\\":\\"callback\\",\\"language\\":5,\\"incident_id\\":[\\"199\\"],\\"external_id\\":\\"123abc\\",\\"external_platform\\":\\"connect\\"}",
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/json;charset=utf-8",
    },
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/phone_outbound",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": undefined,
  "headers": undefined,
  "request": Object {
    "responseUrl": "/phone_outbound",
  },
  "status": 201,
}
`;

exports[`outbound api resolves cases by number 1`] = `
Object {
  "ids": Array [
    0,
    1,
    3,
  ],
  "pdas": Array [
    1,
  ],
  "worksites": Array [
    1,
  ],
}
`;

exports[`outbound api retrieves outbound by number 1`] = `
Array [
  Object {
    "external_id": "123abc",
    "external_platform": "connect",
    "id": 0,
    "pda": null,
    "phone_number": "+1234567890",
    "worksite": null,
  },
]
`;

exports[`outbound api unlocks the latest callback 1`] = `
Object {
  "config": Object {
    "data": undefined,
    "headers": Object {
      "Accept": "application/json, text/plain, */*",
      "Content-Type": "application/x-www-form-urlencoded",
    },
    "maxContentLength": -1,
    "method": "post",
    "timeout": 0,
    "transformRequest": Array [
      [Function],
    ],
    "transformResponse": Array [
      [Function],
    ],
    "url": "/phone_outbound/99/unlock",
    "validateStatus": [Function],
    "xsrfCookieName": "XSRF-TOKEN",
    "xsrfHeaderName": "X-XSRF-TOKEN",
  },
  "data": undefined,
  "headers": undefined,
  "request": Object {
    "responseUrl": "/phone_outbound/99/unlock",
  },
  "status": 200,
}
`;
